; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_addr2line.c_find_offset_in_section.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_addr2line.c_find_offset_in_section.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@found = common dso_local global i64 0, align 8
@SEC_ALLOC = common dso_local global i32 0, align 4
@pc = common dso_local global i64 0, align 8
@syms = common dso_local global i32 0, align 4
@filename = common dso_local global i32 0, align 4
@functionname = common dso_local global i32 0, align 4
@line = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @find_offset_in_section to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_offset_in_section(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i64, i64* @found, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %30

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @bfd_get_section_flags(i32* %10, i32* %11)
  %13 = load i32, i32* @SEC_ALLOC, align 4
  %14 = and i32 %12, %13
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %9
  br label %30

17:                                               ; preds = %9
  %18 = load i32*, i32** %4, align 8
  %19 = call i64 @bfd_get_section_size(i32* %18)
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* @pc, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp sge i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  br label %30

24:                                               ; preds = %17
  %25 = load i32*, i32** %3, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = load i32, i32* @syms, align 4
  %28 = load i64, i64* @pc, align 8
  %29 = call i64 @bfd_find_nearest_line(i32* %25, i32* %26, i32 %27, i64 %28, i32* @filename, i32* @functionname, i32* @line)
  store i64 %29, i64* @found, align 8
  br label %30

30:                                               ; preds = %24, %23, %16, %8
  ret void
}

declare dso_local i32 @bfd_get_section_flags(i32*, i32*) #1

declare dso_local i64 @bfd_get_section_size(i32*) #1

declare dso_local i64 @bfd_find_nearest_line(i32*, i32*, i32, i64, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
